--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=mongodb+srv://root:4GJnQHDK47hIKOmn@cluster0.0c43k.mongodb.net/uptask_mern
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://up-task-frontend-amber.vercel.app
 
 SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=2525
