--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "dev:api": "nodemon --exec ts-node src/index.ts --api",
-    "build": "tsc",
-    "start": "node ./dist/index.js"
+    "dev:api": "nodemon --exec ts-node src/index.ts --api"
   },
   "keywords": [],
   "author": "",
