--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 DATABASE_URL=mongodb+srv://root:4GJnQHDK47hIKOmn@cluster0.0c43k.mongodb.net/uptask_mern
 FRONTEND_URL=https://up-task-frontend-amber.vercel.app
 
-SMTP_HOST=sandbox.smtp.mailtrap.io
-SMTP_PORT=2525
-SMTP_USER=1d4040d7b59fd9
-SMTP_PASS=b5a178d76b11fe
+SMTP_HOST=smtp-relay.brevo.com
+SMTP_PORT=587
+SMTP_USER=7e9d86001@smtp-brevo.com
+SMTP_PASS=HLKtXqWxjgmM79VP
 
 JWT_SECRET=palabrasupersecreta
