--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "sib-api-v3-sdk": "^8.5.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
